--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-        <title>Daneels Jonathan</title>
+        <title>CV Daneels Jonathan</title>
         <meta charset="UTF-8">
-        <link href="./style/style.css" rel="stylesheet">
+        <link href="../style/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -12,9 +12,9 @@
    <nav>
     <div class="menu">
 <ul>
-<li><a href="./index.html">Home</a></li>
-<li><a href="./html/mijncv.html">CV</a></li>
-<li><a href="./html/contact.html">Contact</a></li>
+<li><a href="../index.html">Home</a></li>
+<li><a href="./mijncv.html">CV</a></li>
+<li><a href="./contact.html">Contact</a></li>
 </ul>
 </div>
 </nav>
@@ -24,9 +24,7 @@
 <!-- invulling main-->
 <div class="main">
 <article>
-   <div class="foto">
-<img src="./media/foto/Jo.jpg" alt="profiel foto">
-</div>
+   
 
     <p>Welkom op mijn site, op deze site kan u al mijn gegevens terug vinden. <br>
     Mocht je nog vragen hebben kan u deze altijd via het contact formulier doorgeven.</p>
